--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -50,3 +50,36 @@ jobs:
           push: true
           # List of tags
           tags: ${{secrets.ACR_NAME}}/contoso-website:latest         
+  deploy:
+    runs-on: ubuntu-20.04
+    needs: build_push_image
+
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Install Helm
+        uses: Azure/setup-helm@v1
+        with:
+          version: v3.3.1
+      - name: Azure Kubernetes set context
+        uses: Azure/aks-set-context@v1
+        with:
+          # Azure credentials i.e. output of `az ad sp create-for-rbac --sdk-auth`
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          # Resource Group Name
+          resource-group: mslearn-gh-pipelines-27530
+          # AKS Cluster Name
+          cluster-name: contoso-video
+          
+      - name: Run Helm Deploy
+        run: |
+          helm upgrade \
+            --install \
+            --create-namespace \
+            --atomic \
+            --wait \
+            --namespace staging \
+            contoso-website \
+            ./kubernetes/contoso-website \
+            --set image.repository=${{ secrets.ACR_NAME }} \
+            --set dns.name=${{ secrets.DNS_NAME }}
